--- a/floweco-api-v2/wrangler.toml
+++ b/floweco-api-v2/wrangler.toml
@@ -8,8 +8,8 @@ compatibility_date = "2024-01-01"
 # D1 Database binding
 [[d1_databases]]
 binding = "DB"
-database_name = "floweco-db"
-database_id = "your-database-id-here"  # Replace with actual ID
+database_name = "floweco-db-staging"
+database_id = "566fdb22-b2e8-4a18-8dda-e74da246213b"
 
 # Environment variables (set via Cloudflare dashboard or wrangler secret)
 # JWT_SECRET
